# Haskell-as-Problem-Solving

Backgammon Bot/: Backgammon.cabal
Backgammon Bot/src/: Board.hs  Main.hs  Move.hs  Options.hs  PlayAsBlack.hs  PlayAsWhite.hs  Player.hs  State.hs
Drawing Shapes/src/: ColourName.hs  Warmup.hs  WarmupInteraction.hs
Raster Graphics/: RasterGraphics.cabal
Raster Graphics/src/: Controller.hs  Main.hs  Model.hs  Test.hs  View.hs
src/: Events.hs  View.hs
