name:                RasterGraphics

version:             0.5.2.0

author:              Steven X. Han
maintainer:          steven.han@anu.edu.au
copyright:           The Australian National University ©2018

category:            Graphics

build-type:          Simple

cabal-version:       >=1.10


executable ClickToRaster
  main-is:             Main.hs

  other-modules:
      View,
      Controller,
      Model

  build-depends:
      base                 >= 4.10.1 && < 4.11,
      codeworld-api        == 0.2.2.1,
      text                 >= 1.2.2 && < 1.3,
      doctest              >= 0.14.1 && <= 0.15.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded

test-suite DocTests
  type:
    exitcode-stdio-1.0

  main-is:
    Test.hs

  other-modules:
    Controller,
    Model,
    View

  build-depends:
    base >= 4.10.1 && < 4.11,
    codeworld-api == 0.2.2.1,
    text >= 1.2.2 && < 1.3,
    doctest >= 0.14.0

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
